# Bot_formatacao

./: .gitignore  README.md  pyproject.toml  sandbox_obsidian.py  sandbox_obsidian_one.py
examples/: 1.1.1.1 Agencias bancárias.md
sandbox/: sanbox_list_files.py  sandboc_run_service.py  sandbox_obsidian_one.py  sandbox_report_test.py  sandbox_run_batch.py  sandbox_write_out.py
src/eorbis_docbot/: .env.example  __main__.py  config.py
src/eorbis_docbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eorbis_docbot/controller/: convert_controller.py
src/eorbis_docbot/model/: conversion_report.py
src/eorbis_docbot/services/: converter_to_raw.py
src/eorbis_docbot/transforms/: list_md_files.py  obsidian.py  write_out_md.py
src/eorbis_docbot/view/: console_view.py
